Completed CSS work

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 <!-- Link your CSS stylesheet -->
   <link rel="stylesheet" href="index.css" />
-
 </head>
 
 <body>
   <header>
     <nav>
-      <a href="#planyourvisit">Plan Your<br>Visit</a>
-      <a href="#learnaboutthepark">Learn About<br>the Park</a>
-      <a href="getinvolved">Get<br>Involved</a>
+      <a href="#planyourvisit" class="leftbox">Plan Your<br>Visit</a>
+      <a href="#learnaboutthepark" class="middlebox">Learn About<br>the Park</a>
+      <a href="#getinvolved" class="rightbox">Get<br>Involved</a>
     </nav>
   </header>
   <section class="top">
@@ -29,31 +29,32 @@
   </section>
   <section>
     <div class = "block">
-      <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
-      <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+      <div class = "topblock">
+        <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      </div>
+      <div class = "bottomblock">
+        <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+      </div>
     </div>
   </section>
-  <section>
+  <section class="information">
     <div class = "campfire">
       <img src="https://images.unsplash.com/photo-1464808646948-8f732deb6e4b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80">
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <b>current fire restrictions</b>.</p>
+      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span class="bold">current fire restrictions</span>.</p>
     </div>
     <div class="RV">
       <img src="https://images.unsplash.com/photo-1601481774414-118463da5f26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80">
-      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <b>park entrance fee</b> upon arrival (there's no need to pay it in advance).</p>
+      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span class="bold">park entrance fee</span> upon arrival (there's no need to pay it in advance).</p>
     </div>
   </section>
   <section class="background-image">
 
   </section>
   <footer>
-    <div class="image">
-      <img src="assets/footer_img.jpg">
-    </div>
     <nav>
-      <a href="#planyourvisit">Plan Your<br>Visit</a>
-      <a href="#learnaboutthepark">Learn About<br>the Park</a>
-      <a href="getinvolved">Get<br>Involved</a>
+      <a href="#planyourvisit" class="leftbox">Plan Your<br>Visit</a>
+      <a href="#learnaboutthepark" class="middlebox">Learn About<br>the Park</a>
+      <a href="#getinvolved" class="rightbox">Get<br>Involved</a>
     </nav>
   </footer>
 </body>
